--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Required for login
-TP_EMAIL="user@example.com"
-TP_PASSWORD="your-password-here"
+TP_EMAIL="hasan@nexis365.com.au"
+TP_PASSWORD="photo309"
 
 # Optional settings
 # OUTPUT_ROOT="/absolute/path/for/output"  # defaults to CWD
