--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "outDir": "dist",
     "strict": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "types": [
       "node"
     ],
